--- a/css/carousel.css
+++ b/css/carousel.css
@@ -26,7 +26,7 @@ ul {
     list-style: none;
     font-size: 0;
 
-    transform: translateX(-390px);
+    /* transform: translateX(-390px); */
 }
 
 ul img {
