--- a/css/carousel.css
+++ b/css/carousel.css
@@ -26,7 +26,7 @@ ul {
     list-style: none;
     font-size: 0;
 
-    /* transform: translateX(-390px); */
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 ul img {
